# mcp

./: .gitignore  README.md  __init__.py  pyproject.toml
frappe_mcp/: __init__.py
frappe_mcp/cli/: __init__.py  utils.py
frappe_mcp/server/: __init__.py  handlers.py  server.py  types.py
frappe_mcp/server/prompts/: __init__.py  handlers.py  test_prompts.py
frappe_mcp/server/tests/: test_server.py
frappe_mcp/server/tools/: __init__.py  handlers.py  test_tool_schema.py  tool_schema.py
