[project]
name = "frappe-mcp"
version = "0.1.0"
description = "Frappe MCP allows building MCP compatibility into Frappe apps"
authors = [{ name = "Alan Tom", email = "me@18alan.space" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Werkzeug==3.1.3",
  "pydantic (>=2.11.7,<3.0.0)",
  "jsonschema (>=4.24.0,<5.0.0)",
  "click>=8.2.1",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.0"]

[project.scripts]
frappe-mcp = "frappe_mcp.cli:run"

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "RUF", # ruff-specific rules
  "FA",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"frappe_mcp/server/types.py" = ["N815", "UP007"]
